--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset=="UTF-8">
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>What's For Dinner?: Vegetarian Version</title>
   </head>
   <body>
-    
+    <div class="header">
+      <div class='container'>What's For Dinner?</div>
+  </div>
+    <div class = "main-section">
+
+      <div class = "left-section">
+        <p>What are you looking for?</p>
+        <input type="radio" name="dish-option" value="side-dish">
+        <label for="side-dish">Side</label><br>
+        <input type="radio" name="dish-option" value="main-dish">
+        <label for="main-dish">Main Dish</label><br>
+        <input type="radio" name="dish-option" value="Dessert">
+        <label for="dessert">Dessert</label><br>
+        <button class="lets-cook" type="button">Let's Cook!</button>
+      </div> 
+
+      <div class = "right-section">
+        <img src="/assets/cookpot.svg">
+      </div>
+
+  
+    </div>
+    <script src="main.js"></script>
   </body>
-  <script type="text/javascript" src="main.js"></script>
 </html>
+
+
+//radio button labels don't work when clicking text.
