--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>What's For Dinner?: Vegetarian Version</title>
   </head>
-  <body>
-    <div class="header">
-      <div class='container'>What's For Dinner?</div>
+  <header>
+    What's for Dinner?
   </div>
-    <div class = "main-section">
+  <body>
+  <div class="main-page">
+  <div class = "main-section">
       <div class = "left-section">
         <p>What are you looking for?</p>
         <ul>
@@ -25,15 +26,12 @@
       </div> 
 
       <div class = "right-section">
-        <img src="/assets/cookpot.svg">
+        <img src="/assets/cookpot.svg" alt="cook pot">
       </div>
-
+    </div>  
   
     </div>
     <script type="text/javascript" src="food_list.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
-
-
-//radio button labels don't work when clicking text.
