--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <title>What's For Dinner?: Vegetarian Version</title>
   </head>
   <header>
-    What's for Dinner?
-  </div>
+    <p class="header-title">What's for Dinner?</p>
+  </header>
   <body>
-  <div class="main-page">
-  <div class = "main-section">
-      <div class = "left-section">
+    <section class="login-view">
+      <div class="login-view-left-section">
+        <form>
+          <label for="name">Name</label>
+            <input class="name" type="text" id="name" />
+          <button class="login-button">Login</button>
+        </form>
+      </div>
+    </section>
+    <section class="main-page-view hidden">
+      <div class="main-section">
+        <div class="left-section">
         <p>What are you looking for?</p>
         <ul>
           <li><input type="radio" name="dish-option" id="side-dish" value="side-dish">
@@ -24,11 +33,10 @@
         </ul>
         <button class="lets-cook" type="button">Let's Cook!</button>
       </div> 
-
       <div class = "right-section">
         <img src="/assets/cookpot.svg" alt="cook pot">
       </div>
-    </div>  
+    </section>  
   
     </div>
     <script type="text/javascript" src="food_list.js"></script>
