--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="main-page-view hidden">
       <div class="main-section">
         <div class="left-section">
-        <p>What are you looking for?</p>
+        <p class="looking-for">What are you looking for?</p>
         <ul>
           <li><input type="radio" name="dish-option" id="side-dish" value="side-dish">
           <label for="side-dish">Side</label></li>
